Fixed height & overflow.

--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,6 @@
 	min-width: max-content;
 	min-height: max-content;
 }
-.pane {
-	overflow: auto;
-}
 .light .todo-pane {
 	background: beige;
 }
